--- a/css/app.css
+++ b/css/app.css
@@ -9,3 +9,36 @@
   top: 0;
   left: 0;
 }
+
+.popup {
+  position: absolute;
+  width: 700px;
+  background: #fff;
+  border-radius: 6px;
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+}
+
+.popup h2 {
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+
+.popup button {
+  width: 100%;
+  margin-top: 16px;
+  background: grey;
+  padding: 10px 0;
+  color: #fff;
+  border: 0;
+  outline: none;
+  font-size: 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+}
