--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,7 @@
 
 .popup {
   position: absolute;
+  margin: 16px;
   width: 700px;
   background: #fff;
   border-radius: 6px;
@@ -48,6 +49,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -30%);
-  color: white;
+  color: black;
   font-size: 400px;
 }
